Fix flyout header alignment

--- a/cfgov/unprocessed/apps/paying-for-college/css/college-costs/college-costs.less
+++ b/cfgov/unprocessed/apps/paying-for-college/css/college-costs/college-costs.less
@@ -59,7 +59,7 @@
     max-width: unit(570px / @base-font-size-px, rem);
 
     h3,
-    .h4 {
+    legend.h4 {
       margin-top: unit(30px / @base-font-size-px, em);
     }
 
